[gd_scene load_steps=27 format=3 uid="uid://ckrcxqeye6wpn"]

[ext_resource type="Script" path="res://scenes/question.gd" id="1_7wijv"]
[ext_resource type="StyleBox" uid="uid://ceknykhdxkrix" path="res://themes/questionpanel_normal.tres" id="2_nwfe6"]
[ext_resource type="Theme" uid="uid://ddpx351m2ye8v" path="res://themes/fe_font.tres" id="3_4hhx7"]
[ext_resource type="Material" uid="uid://dj573ymvvkvfg" path="res://shaders/whiten_shader_material.tres" id="4_lut28"]
[ext_resource type="Texture2D" uid="uid://c53va4q00axuk" path="res://graphics/icons/clock.svg" id="5_povqj"]
[ext_resource type="Shader" uid="uid://da8kgx7jwgf8f" path="res://shaders/whiten.tres" id="6_yl8mv"]
[ext_resource type="Texture2D" uid="uid://d3m2il2dy4ob0" path="res://graphics/icons/scroll.svg" id="7_0ib2m"]
[ext_resource type="Texture2D" uid="uid://d07d2xuvt23qt" path="res://graphics/icons/person-rays.svg" id="8_nmy6d"]
[ext_resource type="Texture2D" uid="uid://ctorn41mke8g0" path="res://graphics/icons/child.svg" id="9_epjsh"]
[ext_resource type="Texture2D" uid="uid://tvskx1tk16o6" path="res://graphics/icons/children.svg" id="10_o8653"]
[ext_resource type="Texture2D" uid="uid://bitcbwjbsqpxy" path="res://graphics/icons/trash-can.svg" id="11_d274n"]

[sub_resource type="Theme" id="Theme_enwjd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6kaw"]
bg_color = Color(0.638067, 0.895875, 0.969829, 1)
skew = Vector2(0.3, 0)
border_width_left = 360
border_width_right = 10
border_color = Color(0.2822, 0.51958, 0.83, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5ofu"]
bg_color = Color(2.31028e-06, 0.657777, 0.91733, 1)
skew = Vector2(0.3, 0)
border_width_left = 360
border_width_right = 10
border_color = Color(0.285167, 0.476858, 0.746498, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plqqx"]
bg_color = Color(0.638067, 0.895875, 0.969829, 1)
skew = Vector2(0.3, 0)
border_width_left = 360
border_width_right = 10
border_color = Color(0.2822, 0.51958, 0.83, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qbjb"]
bg_color = Color(0, 0.580392, 0.811765, 1)
border_width_left = 360
border_width_right = 10
border_color = Color(0.1881, 0.347225, 0.57, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp5vb"]
bg_color = Color(0.1802, 0.233467, 0.34, 1)
border_width_right = 325
border_color = Color(0.105706, 0.143815, 0.217377, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_767oh"]
bg_color = Color(0, 0.648, 0.81, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0bgd7"]
shader = ExtResource("6_yl8mv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_suaeb"]
bg_color = Color(0, 0.648, 0.81, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irwxc"]
bg_color = Color(0.91, 0.644887, 0.2184, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kadhw"]
shader = ExtResource("6_yl8mv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgdl3"]
bg_color = Color(0.671738, 0.749881, 0.300363, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds3ig"]
bg_color = Color(0.196727, 0.470242, 0.436046, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3444v"]
shader = ExtResource("6_yl8mv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6m3gn"]
bg_color = Color(0.733333, 0.176471, 0.231373, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Question" type="MarginContainer"]
custom_minimum_size = Vector2(673, 145)
offset_left = 1.0
offset_right = 674.0
offset_bottom = 145.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 45
script = ExtResource("1_7wijv")

[node name="Elements" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="QuestionButton" type="Button" parent="Elements"]
custom_minimum_size = Vector2(673, 77)
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_enwjd")
theme_override_styles/focus = SubResource("StyleBoxFlat_c6kaw")
theme_override_styles/hover = SubResource("StyleBoxFlat_w5ofu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_plqqx")
theme_override_styles/normal = SubResource("StyleBoxFlat_0qbjb")

[node name="Panel" type="Panel" parent="Elements/QuestionButton"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 672.0
offset_bottom = 76.0
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_nwfe6")

[node name="Text" type="Label" parent="Elements/QuestionButton/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 642.0
offset_bottom = 56.0
mouse_filter = 1
theme = ExtResource("3_4hhx7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "A question can be this long, can't it? It really can, since that's a really long expansion system mmmmmm I really don't know if this is feasible but we do what we must."
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Actions" type="Panel" parent="Elements"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_cp5vb")

[node name="Container" type="HBoxContainer" parent="Elements/Actions"]
layout_mode = 0
offset_left = 7.0
offset_right = 672.0
offset_bottom = 55.0

[node name="Levels" type="HBoxContainer" parent="Elements/Actions/Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="SRLevel" type="MarginContainer" parent="Elements/Actions/Container/Levels"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Elements/Actions/Container/Levels/SRLevel"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_767oh")

[node name="SRLabelMargin" type="MarginContainer" parent="Elements/Actions/Container/Levels/SRLevel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Elements/Actions/Container/Levels/SRLevel/SRLabelMargin"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Elements/Actions/Container/Levels/SRLevel/SRLabelMargin/HBoxContainer"]
material = ExtResource("4_lut28")
layout_mode = 2
texture = ExtResource("5_povqj")
expand_mode = 2

[node name="SRLabel" type="Label" parent="Elements/Actions/Container/Levels/SRLevel/SRLabelMargin/HBoxContainer"]
material = SubResource("ShaderMaterial_0bgd7")
layout_mode = 2
theme = ExtResource("3_4hhx7")
theme_override_font_sizes/font_size = 21
text = "SR01"

[node name="Level" type="MarginContainer" parent="Elements/Actions/Container/Levels"]
layout_mode = 2

[node name="Button" type="Panel" parent="Elements/Actions/Container/Levels/Level"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_suaeb")

[node name="MarginContainer" type="MarginContainer" parent="Elements/Actions/Container/Levels/Level"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Elements/Actions/Container/Levels/Level/MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Elements/Actions/Container/Levels/Level/MarginContainer/HBoxContainer"]
material = ExtResource("4_lut28")
layout_mode = 2
texture = ExtResource("7_0ib2m")
expand_mode = 2

[node name="Label" type="Label" parent="Elements/Actions/Container/Levels/Level/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_0bgd7")
layout_mode = 2
theme = ExtResource("3_4hhx7")
theme_override_font_sizes/font_size = 21
text = "Exam"

[node name="Relationships" type="HBoxContainer" parent="Elements/Actions/Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Parent" type="MarginContainer" parent="Elements/Actions/Container/Relationships"]
layout_mode = 2

[node name="ParentButton" type="Button" parent="Elements/Actions/Container/Relationships/Parent"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_styles/normal = SubResource("StyleBoxFlat_irwxc")
expand_icon = true

[node name="IconContainer" type="MarginContainer" parent="Elements/Actions/Container/Relationships/Parent"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="Elements/Actions/Container/Relationships/Parent/IconContainer"]
material = SubResource("ShaderMaterial_kadhw")
layout_mode = 2
mouse_filter = 2
texture = ExtResource("8_nmy6d")
expand_mode = 1
stretch_mode = 5

[node name="Child" type="MarginContainer" parent="Elements/Actions/Container/Relationships"]
layout_mode = 2

[node name="ChildButton" type="Button" parent="Elements/Actions/Container/Relationships/Child"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_rgdl3")
expand_icon = true

[node name="IconContainer" type="MarginContainer" parent="Elements/Actions/Container/Relationships/Child"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="Elements/Actions/Container/Relationships/Child/IconContainer"]
material = SubResource("ShaderMaterial_kadhw")
layout_mode = 2
mouse_filter = 2
texture = ExtResource("9_epjsh")
expand_mode = 1
stretch_mode = 5

[node name="Sibling" type="MarginContainer" parent="Elements/Actions/Container/Relationships"]
layout_mode = 2

[node name="SiblingButton" type="Button" parent="Elements/Actions/Container/Relationships/Sibling"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ds3ig")
expand_icon = true

[node name="IconContainer" type="MarginContainer" parent="Elements/Actions/Container/Relationships/Sibling"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="Elements/Actions/Container/Relationships/Sibling/IconContainer"]
material = SubResource("ShaderMaterial_3444v")
layout_mode = 2
mouse_filter = 2
texture = ExtResource("10_o8653")
expand_mode = 1
stretch_mode = 5

[node name="Delete" type="MarginContainer" parent="Elements/Actions/Container"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="DeleteButton" type="Button" parent="Elements/Actions/Container/Delete"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6m3gn")
expand_icon = true

[node name="IconContainer" type="MarginContainer" parent="Elements/Actions/Container/Delete"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="Elements/Actions/Container/Delete/IconContainer"]
layout_mode = 2
texture = ExtResource("11_d274n")
expand_mode = 1
stretch_mode = 5

[connection signal="focus_entered" from="Elements/QuestionButton" to="." method="_on_question_button_focus_entered"]
[connection signal="focus_exited" from="Elements/QuestionButton" to="." method="_on_question_button_focus_exited"]
[connection signal="pressed" from="Elements/Actions/Container/Relationships/Parent/ParentButton" to="." method="_on_parent_button_pressed"]
[connection signal="pressed" from="Elements/Actions/Container/Relationships/Child/ChildButton" to="." method="_on_child_button_pressed"]
[connection signal="pressed" from="Elements/Actions/Container/Relationships/Sibling/SiblingButton" to="." method="_on_sibling_button_pressed"]
[connection signal="pressed" from="Elements/Actions/Container/Delete/DeleteButton" to="." method="_on_delete_button_pressed"]
